--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "animejs": "^1.1.3",
     "babel-runtime": "6.18.0",
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-minimal-google-maps": "0.0.42",
     "react-mounter": "^1.2.0"
   }
 }
