--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-minimal-google-maps": "0.0.42",
-    "react-mounter": "^1.2.0"
+    "react-mounter": "^1.2.0",
+    "slick-carousel": "^1.6.0"
   }
 }
