--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   },
   "dependencies": {
     "babel-runtime": "6.18.0",
+    "jquery-unslider": "^1.2.0",
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-minimal-google-maps": "0.0.42",
-    "react-mounter": "^1.2.0",
-    "slick-carousel": "^1.6.0"
+    "react-mounter": "^1.2.0"
   }
 }
