--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   },
   "dependencies": {
     "babel-runtime": "6.18.0",
-    "jquery-unslider": "^1.2.0",
+    "jquery": "^3.1.1",
+    "lightbox2": "^2.9.0",
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
