--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
   },
   "dependencies": {
     "babel-runtime": "^6.18.0",
-    "jquery": "^3.1.1",
-    "lightbox2": "^2.9.0",
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-minimal-google-maps": "0.0.42",
-    "react-mounter": "^1.2.0"
+    "react-mounter": "^1.2.0",
+    "react-minimal-google-maps": "0.0.42"
   }
 }
